[FEATURE] add fonts fix color for download menu

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,4 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
+    <color name="color_menu_download">#E7EBFF</color>
 </resources>
