--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,6 +17,9 @@
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/to_right"/>
+        <action
+            android:id="@+id/action_galleryFragment_to_myDownloadFragment"
+            app:destination="@id/myDownloadFragment" />
     </fragment>
     <fragment
         android:id="@+id/detailsFragment"
@@ -41,4 +44,8 @@
             app:popUpTo="@id/splashFragment"
             app:popUpToInclusive="true"/>
     </fragment>
+    <fragment
+        android:id="@+id/myDownloadFragment"
+        android:name="com.javadEsl.pixel.ui.myDownload.MyDownloadFragment"
+        android:label="MyDownloadFragment" />
 </navigation>
