--- a/app/src/main/res/layout/item_list_my_download.xml
+++ b/app/src/main/res/layout/item_list_my_download.xml
@@ -9,12 +9,19 @@
     android:layout_marginRight="4dp"
     android:orientation="vertical"
     app:cardElevation="5dp"
-    app:cardBackgroundColor="@color/purple_500"
     app:cardCornerRadius="15dp">
+
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_error_photos"
+            android:scaleType="center" />
 
         <ImageView
             android:id="@+id/image_view"
