--- a/app/src/main/res/layout/fragment_my_download.xml
+++ b/app/src/main/res/layout/fragment_my_download.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <include layout="@layout/layout_toolbar_screens" />
@@ -11,10 +11,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_my_download"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="vertical"
-        app:spanCount="2"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        tools:listitem="@layout/fragment_my_download" />
+        app:spanCount="2"
+        tools:listitem="@layout/item_list_my_download" />
 
 </LinearLayout>
