--- a/app/src/main/res/layout/item_unsplash_photo.xml
+++ b/app/src/main/res/layout/item_unsplash_photo.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_gallery_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="7dp"
@@ -32,18 +33,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_alignParentBottom="true"
-                app:cardElevation="0dp"
-                app:cardBackgroundColor="@android:color/transparent"
                 android:layout_margin="10dp"
-                app:cardCornerRadius="15dp">
+                app:cardBackgroundColor="@android:color/transparent"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="0dp">
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:id="@+id/view_back_item"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#99000000"
                     android:gravity="center|left"
                     android:orientation="horizontal"
-                    android:background="#99000000"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp">
 
@@ -73,10 +74,10 @@
                         <TextView
                             android:id="@+id/text_view_user_name"
                             android:layout_width="0dp"
-                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_marginEnd="8dp"
+                            android:layout_weight="1"
                             android:ellipsize="end"
                             android:gravity="center_vertical"
                             android:maxLines="1"
@@ -106,8 +107,6 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
             </androidx.cardview.widget.CardView>
-
-
 
 
         </RelativeLayout>
