--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FF9800</color>
+    <color name="purple_200">#916eff</color>
     <color name="purple_500">#3F51B5</color>
     <color name="purple_700">#303F9F</color>
     <color name="teal_200">#FF03DAC5</color>
