--- a/app/src/main/res/layout/layout_dialog_permissiont_info.xml
+++ b/app/src/main/res/layout/layout_dialog_permissiont_info.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="center"
-            android:text="تایید دستی مجوز دسترسی به حافظه"
+            android:text="@string/string_title_alert_ok_permission"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:gravity="center"
-            android:text="برای دانلود تصاویر و اشتراک گزاری آنها نیاز به مجور دسترسی به حافظه می باشد . \n لطفا در تنظیمات برنامه مجوز را فعال کنید"
+            android:text="@string/string_title_alert_detail_ok_permission"
             android:textColor="@color/black"
             android:textSize="16sp" />
 
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/shape_btn_cancel"
-                android:text="انصراف"
+                android:text="@string/string_btn_cancel"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/shape_btn_success"
-                android:text="تنظیمات"
+                android:text="@string/string_btn_setting"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
