[FIX] ui layout_bottom_sheet_photo.xml and show toast after delete finished

--- a/app/src/main/res/layout/layout_bottom_sheet_photo.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_photo.xml
@@ -70,7 +70,6 @@
 
         </LinearLayout>
 
-
     </LinearLayout>
 
     <RelativeLayout
@@ -85,12 +84,11 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-
             <com.github.chrisbanes.photoview.PhotoView
                 android:id="@+id/photo_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerInside"/>
+                android:scaleType="fitCenter"/>
 
         </LinearLayout>
 
