--- a/app/src/main/res/drawable/shape_bottom_sheet_preview.xml
+++ b/app/src/main/res/drawable/shape_bottom_sheet_preview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/color_background_preview_menu" />
     <corners
         android:topLeftRadius="16dp"
         android:topRightRadius="16dp" />
