--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -208,6 +208,7 @@
                 android:gravity="center|right"
                 android:orientation="vertical"
                 android:paddingStart="16dp"
+                android:background="@color/color_background_gallery_item"
                 android:paddingTop="7dp"
                 android:paddingEnd="16dp"
                 android:paddingBottom="7dp">
