--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFEFEF"
     android:orientation="vertical"
     tools:context=".ui.gallery.GalleryFragment">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="120dp"
+        app:layout_collapseMode="parallax">
 
         <ImageView
             android:id="@+id/image_view_banner"
@@ -23,13 +22,14 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#4D000000" />
+            android:background="#80000000" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:gravity="center|top"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/ly_my_download"
@@ -52,54 +52,119 @@
                     android:textSize="23dp"
                     android:textStyle="bold" />
 
-            </androidx.appcompat.widget.LinearLayoutCompat>
 
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="50dp"
-                android:background="@drawable/shape_edt_search"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="7dp"
-                android:paddingRight="7dp">
+                android:orientation="horizontal">
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/img_clean"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginEnd="7dp"
-                    android:padding="4dp"
-                    android:src="@drawable/ic_close"
-                    android:visibility="invisible"
-                    tools:visibility="visible" />
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardBackgroundColor="#F2FFFFFF"
+                    app:cardCornerRadius="13dp"
+                    app:cardElevation="0dp"
+                    app:contentPadding="7dp">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edt_search"
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <androidx.appcompat.widget.LinearLayoutCompat
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="3dp"
+                            android:layout_marginRight="7dp"
+                            android:gravity="center|right"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="دانلود های من"
+                                android:textColor="@color/black"
+                                android:textSize="12dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="12 تصویر دانلود شده"
+                                android:textSize="11dp" />
+
+                        </androidx.appcompat.widget.LinearLayoutCompat>
+
+                        <com.google.android.material.card.MaterialCardView
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            app:cardBackgroundColor="#D8D8D8"
+                            app:cardCornerRadius="9dp"
+                            app:cardElevation="0dp">
+
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:scaleType="centerInside"
+                                android:src="@drawable/ic_cloud_download" />
+                        </com.google.android.material.card.MaterialCardView>
+
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="0dp"
-                    android:layout_height="45dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="7dp"
                     android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:ellipsize="end"
+                    android:background="@drawable/shape_edt_search"
                     android:gravity="center"
-                    android:hint="@string/string_hint_edittext_search"
-                    android:imeOptions="actionSearch"
-                    android:inputType="text"
-                    android:maxLines="1"
-                    android:textColor="@color/white"
-                    android:textColorHint="#BABABA"
-                    android:textSize="13sp" />
+                    android:orientation="horizontal"
+                    android:paddingLeft="7dp"
+                    android:paddingRight="7dp">
 
-                <ImageButton
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginEnd="7dp"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/ic_search" />
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/img_clean"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginEnd="7dp"
+                        android:padding="4dp"
+                        android:src="@drawable/ic_close"
+                        android:visibility="invisible"
+                        tools:visibility="visible" />
 
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edt_search"
+                        android:layout_width="0dp"
+                        android:layout_height="45dp"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent"
+                        android:ellipsize="end"
+                        android:gravity="center"
+                        android:hint="@string/string_hint_edittext_search"
+                        android:imeOptions="actionSearch"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:textColor="@color/white"
+                        android:textColorHint="#BABABA"
+                        android:textSize="12sp" />
+
+                    <ImageButton
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginEnd="7dp"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_search" />
+
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -110,14 +175,15 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingEnd="7dp"
+            android:paddingEnd="10dp"
             app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
             app:spanCount="2"
             tools:itemCount="10"
@@ -163,4 +229,4 @@
 
     </RelativeLayout>
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</LinearLayout>
