--- a/app/src/main/res/layout/item_unsplash_photo.xml
+++ b/app/src/main/res/layout/item_unsplash_photo.xml
@@ -5,11 +5,11 @@
     android:id="@+id/card_gallery_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="7dp"
-    android:layout_marginBottom="7dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="10dp"
+    app:cardBackgroundColor="@color/color_background_gallery_item"
     app:cardCornerRadius="15dp"
-    app:cardElevation="3dp"
-    app:cardPreventCornerOverlap="false">
+    app:cardElevation="6dp">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -19,9 +19,9 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginRight="6dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             app:cardCornerRadius="15dp"
             app:cardElevation="0dp"
             app:cardPreventCornerOverlap="false">
@@ -38,7 +38,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_margin="6dp"
+            android:layout_margin="10dp"
             app:cardBackgroundColor="@android:color/transparent"
             app:cardCornerRadius="15dp"
             app:cardElevation="0dp">
