--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FF9800</color>
+    <color name="purple_200">#2eac68</color>
     <color name="purple_500">#3F51B5</color>
-    <color name="purple_700">#303F9F</color>
+    <color name="purple_700">#000000</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
     <color name="color_menu_download">#E7EBFF</color>
+    <color name="color_background_gallery_item">#1a2a37</color>
+    <color name="color_background_preview_item">#1a2a37</color>
+    <color name="color_background_fragments">#171e24</color>
+    <color name="color_background_action_bar">#1c2a35</color>
+    <color name="color_background_preview_menu">#10161B</color>
 </resources>
