--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_menu_download">#E7EBFF</color>
+    <color name="color_background_gallery_item">#FFFFFF</color>
+    <color name="color_background_fragments">#EFEFEF</color>
+    <color name="color_background_preview_item">#f1f1f1</color>
+    <color name="color_background_action_bar">@color/purple_500</color>
+    <color name="color_background_preview_menu">#ffffff</color>
+    <color name="color_action_bar_preview_menu">#F1F1F1</color>
+
 </resources>
