--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -139,7 +139,7 @@
                                 android:gravity="center"
                                 android:text="@string/string_wallpaper_images"
                                 android:textColor="@color/white"
-                                android:textSize="13sp"
+                                android:textSize="13dp"
                                 android:textStyle="bold" />
 
                             <ImageView
@@ -180,7 +180,7 @@
                                 android:gravity="center"
                                 android:text="@string/string_download_share"
                                 android:textColor="@color/white"
-                                android:textSize="13sp"
+                                android:textSize="13dp"
                                 android:textStyle="bold" />
 
                             <ImageView
@@ -223,7 +223,7 @@
                     android:gravity="center|right"
                     android:text="@string/string_photo_info"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="bold"
                     android:visibility="gone"
                     tools:visibility="visible" />
@@ -375,7 +375,7 @@
                         android:ellipsize="end"
                         android:gravity="right|top"
                         android:maxLines="2"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:visibility="gone"
                         tools:text="loacation"
                         tools:visibility="visible" />
@@ -421,7 +421,7 @@
                         android:ellipsize="end"
                         android:gravity="right|top"
                         android:maxLines="2"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:visibility="gone"
                         tools:text="camera model"
                         tools:visibility="visible" />
@@ -476,7 +476,7 @@
                         android:gravity="center_vertical"
                         android:maxLines="1"
                         android:textColor="@color/white"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         tools:text="username" />
 
                     <TextView
@@ -491,7 +491,7 @@
                         android:maxLines="1"
                         android:text="instagram"
                         android:textColor="#B3FFFFFF"
-                        android:textSize="11sp"
+                        android:textSize="11dp"
                         android:visibility="gone"
                         tools:text="instagram"
                         tools:visibility="visible" />
@@ -506,7 +506,7 @@
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:textColor="@color/white"
-                        android:textSize="12sp"
+                        android:textSize="12dp"
                         android:visibility="gone"
                         tools:text="javad_esl"
                         tools:visibility="visible" />
@@ -524,7 +524,7 @@
                         android:maxLines="1"
                         android:text="Bio"
                         android:textColor="#B3FFFFFF"
-                        android:textSize="11sp"
+                        android:textSize="11dp"
                         android:visibility="gone"
                         tools:text="Bio"
                         tools:visibility="visible" />
@@ -536,7 +536,7 @@
                         android:layout_marginStart="10dp"
                         android:gravity="center_vertical"
                         android:textColor="@color/white"
-                        android:textSize="12sp"
+                        android:textSize="12dp"
                         android:visibility="gone"
                         tools:text="Bio data"
                         tools:visibility="visible" />
