--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_background_fragments"
     android:orientation="vertical"
     tools:context=".ui.gallery.GalleryFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        app:layout_collapseMode="parallax">
+        android:layout_height="180dp">
 
         <ImageView
             android:id="@+id/image_view_banner"
@@ -21,39 +21,21 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#80000000" />
+            android:layout_height="200dp"
+            android:background="#66000000" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center|top"
+            android:gravity="center"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:paddingBottom="16dp">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/ly_my_download"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_logo" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="25dp"
-                    android:gravity="center"
-                    android:text="@string/app_name"
-                    android:textColor="@color/white"
-                    android:textSize="23dp"
-                    android:textStyle="bold" />
-
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_logo" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
@@ -62,67 +44,64 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <com.google.android.material.card.MaterialCardView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center|right"
+                    android:text="  عکس با وضوح بالا"
+                    android:textColor="@color/white"
+                    android:textSize="16dp" />
+
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center|right"
+                    android:text="  رایگان"
+                    android:textColor="@color/purple_200"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center|right"
+                    android:text="جستجو"
+                    android:textColor="@color/white"
+                    android:textSize="16dp" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/card_my_download"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginEnd="10dp"
                     app:cardBackgroundColor="#F2FFFFFF"
-                    app:cardCornerRadius="13dp"
-                    app:cardElevation="0dp"
-                    app:contentPadding="7dp">
+                    app:cardCornerRadius="15dp"
+                    app:cardElevation="0dp">
 
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <androidx.appcompat.widget.LinearLayoutCompat
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="3dp"
-                            android:layout_marginRight="7dp"
-                            android:gravity="center|right"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="دانلود های من"
-                                android:textColor="@color/black"
-                                android:textSize="12dp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="12 تصویر دانلود شده"
-                                android:textSize="11dp" />
-
-                        </androidx.appcompat.widget.LinearLayoutCompat>
-
-                        <com.google.android.material.card.MaterialCardView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            app:cardBackgroundColor="#D8D8D8"
-                            app:cardCornerRadius="9dp"
-                            app:cardElevation="0dp">
-
-                            <androidx.appcompat.widget.AppCompatImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:scaleType="centerInside"
-                                android:src="@drawable/ic_cloud_download" />
-                        </com.google.android.material.card.MaterialCardView>
-
-                    </androidx.appcompat.widget.LinearLayoutCompat>
-
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_gallery" />
 
                 </com.google.android.material.card.MaterialCardView>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="7dp"
+                    android:layout_height="45dp"
+                    android:layout_alignParentBottom="true"
                     android:layout_weight="1"
                     android:background="@drawable/shape_edt_search"
                     android:gravity="center"
@@ -134,7 +113,7 @@
                         android:id="@+id/img_clean"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_marginEnd="7dp"
+                        android:layout_marginStart="7dp"
                         android:padding="4dp"
                         android:src="@drawable/ic_close"
                         android:visibility="invisible"
@@ -147,14 +126,15 @@
                         android:layout_weight="1"
                         android:background="@android:color/transparent"
                         android:ellipsize="end"
-                        android:gravity="center"
+                        android:gravity="center|right"
                         android:hint="@string/string_hint_edittext_search"
                         android:imeOptions="actionSearch"
                         android:inputType="text"
                         android:maxLines="1"
-                        android:textColor="@color/white"
-                        android:textColorHint="#BABABA"
-                        android:textSize="12sp" />
+                        android:paddingRight="10dp"
+                        android:textColor="@color/black"
+                        android:textColorHint="#8C8C8C"
+                        android:textSize="14dp" />
 
                     <ImageButton
                         android:layout_width="24dp"
@@ -168,15 +148,13 @@
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
-
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
